--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.3</version>
         <executions>
           <execution>
             <phase>prepare-package</phase>
